# gear-modeling

./: pyproject.toml
src/gear_modeling/: __init__.py  planetary_gearset.py
