[project]
name = "gear-modeling"
version = "0.1.0"
description = "Utilities for modeling gears."
authors = [{ name = "Jon Dayley", email = "jonathandayley@gmail.com" }]
requires-python = ">=3.14"
dependencies = ["sympy>=1.14.0"]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D107", "E501"]

[tool.pyright]
typeCheckingMode = "strict"
